[gd_scene load_steps=17 format=3 uid="uid://ded068cp03hi5"]

[ext_resource type="Script" path="res://player scripts/sem.gd" id="1_q4sp4"]
[ext_resource type="Texture2D" uid="uid://djpd25pwallw8" path="res://char scene/shadow.png" id="2_yy8d6"]
[ext_resource type="Texture2D" uid="uid://ljeiexfxn4s8" path="res://char scene/skate/dexPack.png" id="9_ow303"]
[ext_resource type="Texture2D" uid="uid://dv0cpqblg6myd" path="res://char scene/skate/kick-removebg-preview.png" id="10_wcvif"]
[ext_resource type="Texture2D" uid="uid://bdbbn2i4wskfr" path="res://uibtn/probase.tres" id="21_kbrdk"]
[ext_resource type="Texture2D" uid="uid://bfey0hscp0qvc" path="res://uibtn/proover.tres" id="22_hfja5"]
[ext_resource type="Script" path="res://player scripts/progressbar/progressbar.gd" id="23_soqpn"]
[ext_resource type="Texture2D" uid="uid://begt7h836uh8o" path="res://uibtn/GUI.png" id="24_t5j25"]
[ext_resource type="FontFile" uid="uid://b07xmv84cnmcm" path="res://fonts/m6x11.ttf" id="25_n35nk"]
[ext_resource type="AudioStream" uid="uid://c85g2sc5bkray" path="res://sfx/character/slash.wav" id="26_qyen2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_efksp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vargi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fh5tc"]
animations = [{
"frames": [],
"loop": false,
"name": &"ack1",
"speed": 9.0
}, {
"frames": [],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [],
"loop": false,
"name": &"hit",
"speed": 12.0
}, {
"frames": [],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_je7n3"]
atlas = ExtResource("24_t5j25")
region = Rect2(144.906, 81.1251, 46.1627, 13.9238)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwoqy"]
atlas = ExtResource("24_t5j25")
region = Rect2(144.898, 97.9193, 46.1961, 13.306)

[sub_resource type="AtlasTexture" id="AtlasTexture_f325v"]
atlas = ExtResource("9_ow303")
region = Rect2(80, 288, 32, 16)

[node name="skate" type="CharacterBody2D"]
position = Vector2(0, 1)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_q4sp4")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(16, 99)

[node name="hitbox" type="Area2D" parent="."]
visible = false
position = Vector2(0, 1)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(2, -16)
scale = Vector2(4.62168, 4.62168)
shape = SubResource("CircleShape2D_efksp")

[node name="Shadow" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.435294)
position = Vector2(1, -0.999999)
rotation = -3.14035
scale = Vector2(0.142357, -0.0216102)
skew = -0.783653
texture = ExtResource("2_yy8d6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-5.96046e-08, -0.999999)
rotation = -6.28319
scale = Vector2(0.631421, 0.631421)
shape = SubResource("CircleShape2D_vargi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -15)
scale = Vector2(0.335559, 0.335559)
sprite_frames = SubResource("SpriteFrames_fh5tc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
self_modulate = Color(1, 0.98, 0.980333, 1)
offset_left = 189.0
offset_top = 137.0
offset_right = 256.0
offset_bottom = 150.0
scale = Vector2(6.07231, 6.07231)
pivot_offset = Vector2(30.88, 20.585)
value = 100.0
texture_under = ExtResource("21_kbrdk")
texture_progress = ExtResource("22_hfja5")
tint_under = Color(0.589096, 0.589096, 0.589096, 1)
script = ExtResource("23_soqpn")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_right = -440.0
grow_vertical = 2
scale = Vector2(1.28388, 1.28388)

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/HBoxContainer"]
position = Vector2(24.1456, -161.23)
scale = Vector2(3.82173, 3.82173)
texture_normal = SubResource("AtlasTexture_je7n3")
texture_pressed = SubResource("AtlasTexture_uwoqy")

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/TouchScreenButton"]
offset_left = 6.40656
offset_top = 1.47843
offset_right = 81.4066
offset_bottom = 24.4784
scale = Vector2(0.598934, 0.598934)
theme_override_colors/font_color = Color(0.815857, 0.773463, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.176471)
theme_override_fonts/font = ExtResource("25_n35nk")
text = "respawns"

[node name="slashsfx" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("26_qyen2")
volume_db = -1.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(9, -11)
ignore_rotation = false
zoom = Vector2(5, 5)
position_smoothing_enabled = true
position_smoothing_speed = 6.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
skew = -0.349066
texture = SubResource("AtlasTexture_f325v")

[node name="Kick-removebg-preview" type="Sprite2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(0.14842, 0.14842)
texture = ExtResource("10_wcvif")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
